syntax="proto2";

package aap_protobuf.service.control.message;

enum ControlMessageType
{
    MESSAGE_VERSION_REQUEST = 1;
    MESSAGE_VERSION_RESPONSE = 2;
    MESSAGE_ENCAPSULATED_SSL = 3;
    MESSAGE_AUTH_COMPLETE = 4;
    MESSAGE_SERVICE_DISCOVERY_REQUEST = 5;
    MESSAGE_SERVICE_DISCOVERY_RESPONSE = 6;
    MESSAGE_CHANNEL_OPEN_REQUEST = 7;
    MESSAGE_CHANNEL_OPEN_RESPONSE = 8;
    MESSAGE_CHANNEL_CLOSE_NOTIFICATION = 9;
    MESSAGE_PING_REQUEST = 11;
    MESSAGE_PING_RESPONSE = 12;
    MESSAGE_NAV_FOCUS_REQUEST = 13;
    MESSAGE_NAV_FOCUS_NOTIFICATION = 14;
    MESSAGE_BYEBYE_REQUEST = 15;
    MESSAGE_BYEBYE_RESPONSE = 16;
    MESSAGE_VOICE_SESSION_NOTIFICATION = 17;
    MESSAGE_AUDIO_FOCUS_REQUEST = 18;
    MESSAGE_AUDIO_FOCUS_NOTIFICATION = 19;
    MESSAGE_CAR_CONNECTED_DEVICES_REQUEST = 20;
    MESSAGE_CAR_CONNECTED_DEVICES_RESPONSE = 21;
    MESSAGE_USER_SWITCH_REQUEST = 22;
    MESSAGE_BATTERY_STATUS_NOTIFICATION = 23;
    MESSAGE_CALL_AVAILABILITY_STATUS = 24;
    MESSAGE_USER_SWITCH_RESPONSE = 25;
    MESSAGE_SERVICE_DISCOVERY_UPDATE = 26;
    MESSAGE_UNEXPECTED_MESSAGE = 255;
    MESSAGE_FRAMING_ERROR = 65535;
}

